2012-08-29  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (multi_sort_less): Change the semantics so that when the
	list of the functions is empty, the left item is considered less
	than the right, thereby preserving the order.

2012-08-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (mapcarv): Changed to external linkage.

	* eval.h (mapcarv): Declaration added.
	(eval_init): New intrinsic multi-sort registered.

	* lib.c (multi_sort_less): New static function.
	(multi_sort): New function.

	* lib.h (multi_sort): Declared.

	* txr.1: stub section added.

2012-05-18  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Registered open-command and open-process
	intrinsics. open-pipe is now deprecated but stays for backward
	compatibility as a synonym for open-command.

	* stream.c (open_pipe): Renamed to open_command.
	(open_pipevp): Renamed to open_process.

	* stream.h (open_pipe, open_pipevp): Declarations updated.

	* txr.1: Documentation headings updated.

2012-05-18  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (open_pipev): Bugfix: program name is included
	as first element of argv.

2012-05-18  Kaz Kylheku  <kaz@kylheku.com>

	Implement open_pipev in terms of popen for Windows which
	does not have for or exec.  We could use CreateProcess and CreatePipe,
	et cetera, but it won't buy us anything because the whole point
	of this function is to improve the argument passing, and CreateProcess
	takes a single command line string, not too different from popen.

	* stream.c (pipev_close, make_pipev_stream): Surrounded with
	HAVE_FORK_STUFF ifdef.
	(pipe_close): Choice of close strategy conditional on HAVE_FORK_STUFF.
	(open_pipev): Conditionally defined in two ways now.
	(win_escape_arg, win_make_cmdline): New static functions.

2012-05-18  Kaz Kylheku  <kaz@kylheku.com>

	* configure: New test added for fork, pipe, exec and waitpid.
	Produces HAVE_FORK_STUFF in config.h.

2012-05-18  Kaz Kylheku  <kaz@kylheku.com>
