@@ -4017,12 +4017,14 @@ static val multi_sort_less(val funcs, val llist, val rlist)
 
 val multi_sort(val funcs, val lists)
 {
-  val lol = mapcarv(func_n0v(identity), lists);
+  val tuples = mapcarv(func_n0v(identity), lists);
 
   if (functionp(funcs))
     funcs = cons(funcs, nil);
 
-  return sort_list(lol, func_f2(funcs, multi_sort_less), identity_f);
+  tuples = sort_list(tuples, func_f2(funcs, multi_sort_less), identity_f);
+
+  return mapcarv(func_n0v(identity), tuples);
 }
 
 val find(val item, val list, val testfun, val keyfun)
